--- a/Game_JS/index.html
+++ b/Game_JS/index.html
@@ -11,10 +11,13 @@
     <img id = "roomImage">
     <p id = 'description'></p>
     <div id = 'exits'></div>
-
-    <h2>Введите значение:</h2>
-    <input type="text" id="userInput" placeholder="Введите что-то...">
-    <button id="submitButton">Отправить</button>
+    <div id="message"></div>
+    <div id="userStat">
+        <h2>Информация о пользователе</h2>
+        <p id="userName"></p>
+        <p id="userHp"></p>
+        <p id="userMoney"></p>
+    </div>
     
     <script src="script.js"></script>
 </body>
